Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-25557

[REG 4.1{3,4}->4.15]Scroll [un]locking in compile output is broken

XMLWordPrintable

    • 33a38394b48462c819062b957f4e7495ee6863db

      • Compile a project with a lot of fast output.
      • Try to scroll up with the keyboard (page up) - scroll gets back to the bottom every time.
      • Scroll with the mouse wheel - it locks in place (good)
      • Now try to get to the bottom again with the keyboard (End) - it doesn't keep scrolling.
      • Press End and scroll down with the mouse wheel - scroll is alive again.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kandeler Christian Kandeler
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes