Core: Consider keyboard navigation in output window scrolling logic

... by using QAbstractSlider::actionTriggered() instead of the mouse-
centric signals.

Fixes: QTCREATORBUG-25557
Change-Id: I0092fbfcb8fefb3a234bfb1592a2483bdc9e68d3
Reviewed-by: Orgad Shaneh <orgads@gmail.com>